--- a/test-monoid.cabal
+++ b/test-monoid.cabal
@@ -12,3 +12,6 @@ executable test-monoid
                   , QuickCheck
   hs-source-dirs:   app
   default-language: Haskell2010
+  other-modules:    Bull
+                  , First
+                  , Optional
